--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 app:
   env: "dev"
-  port: 8080
+  port: ":2565"
 postgres:
   dbDriver : "postgres"
   database_url : "postgresql://root:passw0rd@localhost:5432/kbtg?sslmode=disable"
