--- a/config.yaml
+++ b/config.yaml
@@ -3,4 +3,4 @@ app:
   port: ":2565"
 postgres:
   dbDriver : "postgres"
-  database_url : "postgresql://root:passw0rd@localhost:5432/kbtg?sslmode=disable"
+  database_url : "postgresql://root:passw0rd@host.docker.internal:5432/kbtg?sslmode=disable"
